[LF-32/article-list] search 쿼리가 아닌 경우와 search 쿼리인 경우 분리